--- a/code/app/src/main/res/layout/item_complain.xml
+++ b/code/app/src/main/res/layout/item_complain.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="400dp">
+    android:layout_height="wrap_content"
+    >
 
     <ImageView
         android:id="@+id/ivTotalRating"
@@ -21,10 +22,32 @@
         android:layout_height="wrap_content"
         android:text="Title Example"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="20dp"
         style="@style/TitleTextStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvLocation"
+        style="@style/TextAppearance.AppCompat.Small"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:text="Location"
+        app:layout_constraintEnd_toStartOf="@+id/tvDate"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+
+    <TextView
+        android:id="@+id/tvDate"
+        style="@style/TextAppearance.AppCompat.Small"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Date"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
 
     <ImageView
         android:id="@+id/ivComplain"
@@ -32,8 +55,9 @@
         android:layout_height="300dp"
         android:src="@drawable/logo_login"
         app:layout_constraintEnd_toEndOf="parent"
+        android:scaleType="centerInside"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/tvLocation" />
 
     <TextView
         android:id="@+id/tvDescription"
@@ -42,6 +66,7 @@
         android:layout_marginStart="10dp"
         android:text="Desccription"
         android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/ivComplain"
         app:layout_constraintTop_toBottomOf="@+id/ivComplain" />
 
@@ -98,5 +123,16 @@
         android:layout_marginTop="6dp"
         app:layout_constraintEnd_toStartOf="@+id/ivTotalRating"
         app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
+
+    <ImageView
+        android:id="@+id/ivSeperater"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_marginTop="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvTotalRating"
+        app:srcCompat="@drawable/drop_down_bar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
