--- a/code/app/src/main/res/layout/activity_complain_form.xml
+++ b/code/app/src/main/res/layout/activity_complain_form.xml
@@ -30,12 +30,12 @@
     <ImageView
         android:layout_width="60dp"
         android:layout_height="8dp"
-        android:layout_marginBottom="449dp"
         android:src="@drawable/drop_down_bar"
         android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="@+id/tableLayout"
+        android:layout_marginTop="15dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <LinearLayout
@@ -58,6 +58,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="New Complain"
+            android:layout_marginTop="15dp"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textStyle="bold"
@@ -66,37 +67,12 @@
             tools:layout_editor_absoluteY="70dp" />
 
         <!-- Date and Location Section -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="start|center_vertical"
-            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/tvDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:text="Date"
-                android:textColor="@color/black"
-                android:textSize="20sp" />
-
-            <EditText
-                android:id="@+id/etDate"
-                android:layout_width="0dp"
-                android:layout_height="35dp"
-                android:layout_weight="1"
-                android:background="@drawable/edit_text_box"
-                android:ems="10"
-                android:inputType="date"
-                android:text=""
-                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/tvLocation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
                 android:layout_marginEnd="10dp"
                 android:text="Location"
                 android:textColor="@color/black"
@@ -104,7 +80,7 @@
 
             <EditText
                 android:id="@+id/etLocation"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="35dp"
                 android:layout_weight="1"
                 android:background="@drawable/edit_text_box"
@@ -112,7 +88,6 @@
                 android:inputType="text"
                 android:text=""
                 android:textColor="@color/black" />
-        </LinearLayout>
 
         <!-- Other Form Fields -->
         <TextView
