--- a/code/app/src/main/res/layout/activity_qrscanner.xml
+++ b/code/app/src/main/res/layout/activity_qrscanner.xml
@@ -69,4 +69,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/site_name" />
 
+    <TextView
+        android:id="@+id/result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textColor="#FFFFFF"
+        tools:layout_editor_absoluteX="168dp"
+        tools:layout_editor_absoluteY="457dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
