--- a/code/app/src/main/res/drawable/custom_marker_shape_start.xml
+++ b/code/app/src/main/res/drawable/custom_marker_shape_start.xml
@@ -1,7 +1,11 @@
-<!-- res/drawable/custom_marker_shape_start.xml -->
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#4CAF50"/> <!-- Green color for the start marker -->
-    <corners android:radius="8dp"/>
-    <stroke android:width="2dp" android:color="#388E3C"/> <!-- Darker green stroke -->
-    <size android:width="24dp" android:height="24dp"/>
-</shape>
+<!-- Example of a custom marker shape drawable -->
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24.0"
+    android:viewportHeight="24.0"
+    android:tint="#3D8C40">
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M12,0c-4.41,0 -8,3.59 -8,8s8,16 8,16s8,-11.59 8,-16s-3.59,-8 -8,-8Zm0,11c-1.66,0 -3,-1.34 -3,-3s1.34,-3 3,-3s3,1.34 3,3s-1.34,3 -3,3Z"/>
+</vector>
