--- a/code/app/src/main/res/layout/activity_qrscanner.xml
+++ b/code/app/src/main/res/layout/activity_qrscanner.xml
@@ -75,7 +75,8 @@
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textColor="#FFFFFF"
-        tools:layout_editor_absoluteX="168dp"
-        tools:layout_editor_absoluteY="457dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="168dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
