--- a/code/app/src/main/res/layout/activity_bill_selection.xml
+++ b/code/app/src/main/res/layout/activity_bill_selection.xml
@@ -29,9 +29,9 @@
             app:layout_constraintVertical_bias="10">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="407dp"
-                android:layout_height="331dp"
-                android:layout_marginTop="92dp"
+                android:layout_width="match_parent"
+                android:layout_height="500dp"
+                android:layout_marginTop="104dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -39,45 +39,56 @@
 
                 <TextView
                     android:id="@+id/textView2"
-                    android:layout_width="135dp"
-                    android:layout_height="0dp"
-                    android:layout_marginTop="30dp"
+                    android:layout_width="240dp"
+                    android:layout_height="33dp"
+                    android:layout_marginTop="4dp"
                     android:gravity="center"
-                    android:text="Pending"
-                    app:layout_constraintBottom_toTopOf="@+id/pendingBillRecyclerView"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="@+id/pendingBillRecyclerView"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.0" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/pendingBillRecyclerView"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="73dp"
-                    android:layout_marginEnd="5dp"
-                    android:layout_marginBottom="5dp"
-                    app:layout_constraintBottom_toTopOf="@+id/button10"
+                    android:text="Select Pending Bills To Pay"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/pendingBillRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintBottom_toTopOf="@+id/totalAmountTextView"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+
+                <TextView
+                    android:id="@+id/totalAmountTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="25dp"
+                    android:layout_marginEnd="40dp"
+                    android:text="Total Amount: 0.00€"
+                    android:textColor="@android:color/black"
+                    android:textSize="19sp"
+                    app:layout_constraintBottom_toTopOf="@+id/buttonPay"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/pendingBillRecyclerView" />
+
                 <Button
-                    android:id="@+id/button10"
+                    android:id="@+id/buttonPay"
                     android:layout_width="196dp"
                     android:layout_height="55dp"
-                    android:layout_marginTop="272dp"
+                    android:layout_marginTop="376dp"
                     android:text="Pay"
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintBottom_toBottomOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
