--- a/code/app/src/main/res/layout/item_bill.xml
+++ b/code/app/src/main/res/layout/item_bill.xml
@@ -2,26 +2,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="119dp"
+        android:layout_height="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/billNameTextView"
-            android:layout_width="217dp"
+        <CheckBox
+            android:id="@+id/billTitleTextView"
+            android:layout_width="250dp"
             android:layout_height="39dp"
             android:padding="8dp"
             android:textSize="18sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -29,16 +27,17 @@
 
         <TextView
             android:id="@+id/billAmountTextView"
-            android:layout_width="134dp"
-            android:layout_height="wrap_content"
+            android:layout_width="144dp"
+            android:layout_height="43dp"
             android:padding="8dp"
-            android:textSize="16sp"
+            android:textColor="@android:color/black"
+            android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.96"
+            app:layout_constraintHorizontal_bias="0.941"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.28" />
 
         <TextView
             android:id="@+id/billDateTextView"
@@ -51,7 +50,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.475" />
+            app:layout_constraintVertical_bias="0.508" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
