--- a/code/app/src/main/res/layout/activity_buy_ticket.xml
+++ b/code/app/src/main/res/layout/activity_buy_ticket.xml
@@ -42,9 +42,10 @@
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView"
+                app:layout_constraintTop_toBottomOf="@+id/title2"
+                app:layout_constraintVertical_bias="0.0"
                 app:reverseLayout="true" />
 
             <Spinner
@@ -52,13 +53,35 @@
                 android:layout_width="44dp"
                 android:layout_height="28dp"
                 android:layout_marginBottom="6dp"
-                android:background="#AEAEAE"
-                android:spinnerMode="dropdown"
                 android:textColor="#AEAEAE"
                 app:layout_constraintBottom_toTopOf="@+id/single_use_cv"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text2" />
 
+            <Spinner
+                android:id="@+id/spinner1"
+                android:layout_width="44dp"
+                android:layout_height="28dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="12dp"
+                android:textColor="#AEAEAE"
+                app:layout_constraintBottom_toTopOf="@+id/rv2"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/title2"
+                app:layout_constraintVertical_bias="1.0" />
+
+            <TextView
+                android:id="@+id/line_tv2"
+                android:layout_width="65dp"
+                android:layout_height="28dp"
+                android:text="Line"
+                android:textColor="#AEAEAE"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/rv2"
+                app:layout_constraintStart_toEndOf="@+id/spinner1"
+                app:layout_constraintTop_toBottomOf="@+id/title2"
+                app:layout_constraintVertical_bias="0.0" />
             <TextView
                 android:id="@+id/line_tv"
                 android:layout_width="65dp"
@@ -87,7 +110,7 @@
                 app:layout_constraintVertical_bias="0.563" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/title2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -150,10 +173,10 @@
                         android:text="TextView"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/buy_week"
-                        app:layout_constraintHorizontal_bias="0.658"
+                        app:layout_constraintHorizontal_bias="0.39"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView4"
-                        app:layout_constraintVertical_bias="0.362" />
+                        app:layout_constraintVertical_bias="0.517" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.cardview.widget.CardView>
@@ -185,40 +208,29 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.207" />
 
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="142dp"
-                        android:layout_height="58dp"
-                        android:backgroundTint="#FFFFFF"
-                        app:cardCornerRadius="20dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/price_single_xamount"
-                        app:layout_constraintHorizontal_bias="0.0"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.901" />
 
                     <TextView
                         android:id="@+id/amount_tv"
-                        android:layout_width="53dp"
-                        android:layout_height="38dp"
-                        android:text="Choose amount"
-                        android:textColor="#AEAEAE"
-                        android:textSize="16sp"
+                        android:layout_width="11dp"
+                        android:layout_height="26dp"
+                        android:text="1"
+                        android:textColor="#000000"
+                        android:textSize="18sp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.137"
+                        app:layout_constraintHorizontal_bias="0.152"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/single_use"
-                        app:layout_constraintVertical_bias="0.589" />
-
+                        app:layout_constraintVertical_bias="0.57" />
 
                     <Button
                         android:id="@+id/btn_minus"
                         android:layout_width="42dp"
                         android:layout_height="38dp"
-                        android:layout_marginEnd="4dp"
+                        android:layout_marginEnd="8dp"
                         android:text="-"
+                        android:background="@drawable/custom_edittext"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/amount_tv"
                         app:layout_constraintTop_toTopOf="parent"
@@ -228,11 +240,13 @@
                         android:id="@+id/btn_plus"
                         android:layout_width="42dp"
                         android:layout_height="38dp"
+                        android:layout_marginStart="8dp"
                         android:text="+"
+                        android:background="@drawable/custom_edittext"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/amount_tv"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.794" />
+                        app:layout_constraintVertical_bias="0.807" />
 
                     <Button
                         android:id="@+id/buy_single"
@@ -258,10 +272,10 @@
                         android:text="TextView"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/buy_single"
-                        app:layout_constraintHorizontal_bias="0.652"
+                        app:layout_constraintHorizontal_bias="0.691"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/single_use"
-                        app:layout_constraintVertical_bias="0.275" />
+                        app:layout_constraintVertical_bias="0.172" />
 
                     <TextView
                         android:id="@+id/price_single_xamount"
@@ -270,10 +284,10 @@
                         android:text="TextView"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/buy_single"
-                        app:layout_constraintHorizontal_bias="0.652"
+                        app:layout_constraintHorizontal_bias="0.691"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/single_use"
-                        app:layout_constraintVertical_bias="0.675" />
+                        app:layout_constraintVertical_bias="0.724" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
@@ -321,6 +335,7 @@
                         app:layout_constraintVertical_bias="0.0">
 
                     </Button>
+
                     <TextView
                         android:id="@+id/price_month"
                         android:layout_width="wrap_content"
@@ -328,10 +343,10 @@
                         android:text="TextView"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/buy_month"
-                        app:layout_constraintHorizontal_bias="0.658"
+                        app:layout_constraintHorizontal_bias="0.47"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView5"
-                        app:layout_constraintVertical_bias="0.362" />
+                        app:layout_constraintVertical_bias="0.517" />
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
