--- a/code/app/src/main/res/layout/activity_bill_selection.xml
+++ b/code/app/src/main/res/layout/activity_bill_selection.xml
@@ -25,7 +25,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="640dp"
+            android:layout_height="match_parent"
             app:layout_constraintVertical_bias="10">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -91,6 +91,18 @@
                     app:layout_constraintBottom_toBottomOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/billBottomNavigationView"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_alignParentBottom="true"
+                app:menu="@menu/bill_bottom_navigation_menu"
+                app:itemTextAppearanceActive="@style/BottomNavigationTextStyle"
+                app:itemTextAppearanceInactive="@style/BottomNavigationTextStyle"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
