--- a/code/app/src/main/res/values/styles.xml
+++ b/code/app/src/main/res/values/styles.xml
@@ -7,4 +7,10 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
+    <!-- res/values/styles.xml -->
+    <style name="BottomNavigationTextStyle" parent="@android:style/TextAppearance.Widget.TabWidget">
+        <item name="android:textSize">22sp</item> <!-- Adjust the text size as per your preference -->
+    </style>
+
 </resources>
