--- a/code/app/src/main/res/layout/activity_complain_main.xml
+++ b/code/app/src/main/res/layout/activity_complain_main.xml
@@ -65,10 +65,11 @@
         android:id="@+id/ivProfile"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_marginEnd="60dp"
+        android:background="@drawable/baseline_account_circle_24"
         app:layout_constraintBottom_toTopOf="@+id/feedWhite"
-        app:layout_constraintEnd_toStartOf="@+id/swLanguage"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/baseline_account_circle_24" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/ivBell"
@@ -79,17 +80,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_notifications_black_24dp" />
-
-    <androidx.appcompat.widget.SwitchCompat
-        android:id="@+id/swLanguage"
-        android:layout_width="0dp"
-        android:layout_height="31dp"
-        android:checked="true"
-        android:text="UK"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/feedWhite"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Wrap the RecyclerView with SwipeRefreshLayout -->
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
