--- a/code/app/src/main/res/layout/activity_login.xml
+++ b/code/app/src/main/res/layout/activity_login.xml
@@ -25,25 +25,25 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="395dp"
-            android:layout_height="280dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="339dp"
+            android:layout_height="240dp"
+            android:layout_marginTop="80dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.071"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.172"
             app:srcCompat="@drawable/logo_login" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
             android:layout_width="318dp"
             android:layout_height="409dp"
+            android:layout_marginTop="104dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.488"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.872">
+            app:layout_constraintTop_toBottomOf="@+id/imageView2"
+            app:layout_constraintVertical_bias="0.894">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardview1"
@@ -95,7 +95,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:autofillHints="@string/prompt_email"
-                    android:background="@drawable/custom_edittext"
+                    android:background="@drawable/button_disabled_color"
                     android:hint="@string/prompt_email"
                     android:inputType="textEmailAddress"
                     android:selectAllOnFocus="true"
@@ -122,7 +122,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:autofillHints="@string/prompt_password"
-                    android:background="@drawable/custom_edittext"
+                    android:background="@drawable/button_disabled_color"
                     android:hint="@string/prompt_password"
                     android:imeActionLabel="@string/action_sign_in_short"
                     android:imeOptions="actionDone"
